# typclingo

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.github/workflows/: test.yml
doc/: doc.tex
docs/: getting_started.md  index.md
docs/community/: help.md  index.md
docs/reference/api/: index.md
docs/reference/encodings/: index.md
examples/: light-del.lp  light-mel.lp  light-tel.lp  mc.lp  meta.lp  queens.lp  sort.lp  test.lp  toh.lp
src/typclingo/: __init__.py  __main__.py  app.py  parser.py  spec.py
src/typclingo/checker/: __init__.py  clingo.py  core.py
src/typclingo/utils/: ast.py  logging.py  parser.py
tests/: test_checker.py  test_main.py
